--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
         }
       },
       "requests": {
-        "requestLicence": {},
-        "requestSAV": {}
+        "fetchFromGoogleScript": {}
       }
     }
   },
